# ETB-Project

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROMPTS.md  README.md  README_chatbot.md  Untitled  app.py  check_job.py  debug_orchestrator.py  debug_retrieval.py  docker-compose.yml  inspect_faiss.py  langgraph.json  manual_index.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_employee_query.py  test_multi_questions.py  test_orchestrator.py  test_retriever.py  test_table_extraction.py  upload_indmex_pdfs.py
.cursor/: settings.json
.plan/: agentic_orchestrator_ff7cd443.plan.md  bm25_plan_gap_review_47476971.plan.md  cli_local_agent_parity_58072912.plan.md  content-based_chunk_dedupe_a2129eee.plan.md  core_rag_pipeline_plan_d224c3a7.plan.md  dual_retriever_integration_65531a4d.plan.md  fix-langgraph-blocking-error_803d2ab8.plan.md  fix_image_rendering_after_docker_deploy_d87b10d9.plan.md  grounded_subagent_package_e69b3323.plan.md  image-captioning-integration_6eab6c40.plan.md  improve-pdf-pagination_44f8f404.plan.md  langgraph-migration-plan_3df76782.plan.md  langgraph-report-generation_0dd4c8a1.plan.md  minimal_docker_ci_smoke_16e821a3.plan.md  modular_vector_db_indexing_6014756b.plan.md  openai_sdk_captioning_a46f81d8.plan.md  option_b_asset_urls_8a615b7b.plan.md  orchestrator_hardening_cd670252.plan.md  orion_conditional_langgraph_c9648803.plan.md  readme-to-docs-reorg_1f4eabc0.plan.md  reasoning-llm-reporting_7d077db4.plan.md  retail-report-generation-suite_7002e186.plan.md  retrieval_technique_plans_56cacdd6.plan.md  retriever_api_migration_5b464383.plan.md  standalone_doc_processor_19516f03.plan.md  start-everything_script_2c6576e7.plan.md  streamlit-orchestrator-remoteretriever_d78647a0.plan.md  streamlit_access_control_55dd5f24.plan.md  streamlit_sources_ui_565797ba.plan.md  two-faiss-indices_96027c6a.plan.md  unify-llm-providers_aa8332a1.plan.md  upgrade-report-generation-to-langgraph_1ff2cfeb.plan.md  upgrade-report-pdf-aesthetics_41b7ba20.plan.md
.streamlit/: secrets.toml.example
docker/: ollama-entrypoint.sh  ollama-healthcheck.sh
docs/: APP_RUN_MODES.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENT_PROCESSING.md  IMAGE_CAPTIONING.md  ORCHESTRATOR_API.md  README.md  RETRIEVER_API.md  TOOLS.md  USAGE.md
scripts/: _verify_admin_login_ui.py
tests/: __init__.py  test_agent_merge_documents.py  test_agent_orchestrator.py  test_api_retriever.py  test_bm25_retrieval.py  test_config.py  test_document_processing.py  test_document_processor_cli.py  test_dual_retriever.py  test_evaluation_dataset_io.py  test_evaluation_history_dashboard.py  test_evaluation_http_runner.py  test_evaluation_metrics_report_cli.py  test_evaluation_notes_gitcommit.py  test_evaluation_synthetic_metrics_runner.py  test_graph_rag.py  test_grounded_subagent.py  test_hierarchy_retrieval.py  test_hyde_retrieval.py  test_indexing_service.py  test_llm_client.py  test_llm_messages.py  test_llm_provider_errors.py  test_main.py  test_models.py  test_models_providers.py  test_orchestrator_admin_auth.py  test_orchestrator_api.py  test_orchestrator_settings.py  test_orion_parse.py  test_pipeline_retrieval.py  test_processor_asset_path.py  test_prompts_config.py  test_report_base_and_sales.py  (+13 more)
(+162 files in other folders)
